Bug 485149 - Using box-shadow on a <fieldset> with <legend> does not follow box shape.  r=roc